--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.2",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/jest": "^29.5.14",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
