--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "learn_bootstrap_js_login_page",
-  "version": "1.0.1",
+  "version": "1.0.2-SNAPSHOT",
   "main": "main.js",
   "scripts": {
     "test": "jest --coverage",
